# oscilloplot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  setup_externals.ps1  setup_externals.sh  vcpkg.json
docs/: index.html  user_manual.html
src/: app.cpp  app.hpp  main.cpp
src/audio/: audio_buffer.cpp  audio_buffer.hpp  audio_engine.cpp  audio_engine.hpp  realtime_audio.hpp  wav_export.cpp  wav_export.hpp
src/audio/effects/: echo.cpp  echo.hpp  effect_base.hpp  effect_chain.cpp  effect_chain.hpp  effect_processor.hpp  fade.cpp  fade.hpp  kaleidoscope.cpp  kaleidoscope.hpp  noise.cpp  noise.hpp  ring_mod.cpp  ring_mod.hpp  rotation.cpp  rotation.hpp  tremolo.cpp  tremolo.hpp  wavy.cpp  wavy.hpp
src/data/: file_loader.cpp  file_loader.hpp  file_saver.cpp  file_saver.hpp  pattern.cpp  pattern.hpp
src/generators/: harmonics.cpp  harmonics.hpp  random_harmonics.cpp  random_harmonics.hpp  spiral.cpp  spiral.hpp  stroke_font.hpp  test_pattern.cpp  test_pattern.hpp
src/tools/: vectorizer_tool.cpp
src/ui/: control_panel.cpp  control_panel.hpp  drawing_canvas.cpp  drawing_canvas.hpp  main_window.cpp  main_window.hpp  sound_pad.cpp  sound_pad.hpp  ui_manager.cpp  ui_manager.hpp
src/utils/: dsp_core.hpp  lock_free_queue.hpp  memory_pool.hpp
src/vectorizer/: image_vectorizer.cpp  image_vectorizer.hpp
